--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "icons": [
       {
         "src": "./united.png",
-        "size": "64x64 48x48 32x32",
+        "size": "64x64 48x48 32x32 16x16",
         "type": "image/png"
       } 
     ],
